# ProgressNerf

./: .gitignore  README.md  Sandbox.ipynb  pip-requirements.txt  requirements.txt  setup.py  test.py
.ipynb_checkpoints/: Sandbox-checkpoint.ipynb
ProgressNerf/Architectures/: ConfigurableVoxelGridCachedNerf.py  MaskedSigmaRegNerfArch.py  OGNerfArch.py  VoxelGridCachedNerf.py  VoxelGridNerf.py
ProgressNerf/Dataloading/: ChromaAprilDataloader.py  DNerfDataloader.py  ProgLabelDataloader.py  PyBulletDataloader.py  SemiSynDataloader.py  ToolsPartsDataloader.py  YCBObjectDataloader.py  YCBVideoDataloader.py
ProgressNerf/Encoders/: PositionalEncoder.py
ProgressNerf/Losses/: BetaRegMSELoss.py  MSELoss.py  MSE_DepthLoss.py  SigmaRegMSELoss.py
ProgressNerf/Models/: ConfigurableFastNerf.py  FastNerf.py  NITW.py  OGNerf.py
ProgressNerf/NeuralRendering/: NeuralRenderer.py  VoxelNeuralRenderer.py
ProgressNerf/Raycasting/: NearFarRaysampler.py  NerfMMRaypicker.py  OriginNearFarRaysampler.py  PerturbedRaysampler.py  RandomRaypicker.py  VoxelGridBBoxRaysampler.py  WeightedRaypicker.py  WeightedRaysampler.py
ProgressNerf/Raycasting/csrc/: CMakeLists.txt  raycasting.cpp  weighted_resampling.cu
ProgressNerf/Raycasting/csrc/include/: weighted_resampling.cuh
ProgressNerf/Registries/: DataloaderRegistry.py  EncoderRegistry.py  LossRegistry.py  ModelRegistry.py  RaypickerRegistry.py  RaysamplerRegistry.py  RendererRegistry.py
ProgressNerf/Utils/: CameraUtils.py  FolderUtils.py  PCDReader.py  ParticleField.py  VoxelGrid.py
configs/OGNerfArch/: toolPartsNearFarConfig.yml  (+4 more)
(+31 files in other folders)
